--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
-    "typescript": "3.5.3"
+    "typescript": "3.5.3",
+    "bitmovin-player": "8.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
